--- a/src/components/auth/LoginScreen.css
+++ b/src/components/auth/LoginScreen.css
@@ -31,6 +31,7 @@
 @media only screen and (min-width: 320px) {
     /* For mobile phones */
     .card-container{
+        max-width: 300px;
         width: 100%;
     }
 }
@@ -38,6 +39,7 @@
 @media only screen and (min-width: 600px) {
     /* For tablets */
     .card-container {
+        max-width: 550px;
         width: 100%;
     }
 }
